all tests fully functional - 52 passed total
