# app/blueprints/service_tickets/schemas.py
@@ -20,58 +20,14 @@ class ServiceTicketSchema(ma.SQLAlchemyAutoSchema):
             "service_desc",
             "customer_id",
             "mechanics",
+            "inventory_items",
         )
 
     mechanics = fields.Nested("MechanicSchema", only=("id", "name"), many=True)
+    inventory_items = fields.Nested(
+        "InventoryItemSchema", only=("id", "name", "price"), many=True
+    )
     customer = fields.Nested("CustomerSchema", only=("id", "name", "email", "phone"))
-
-
-# class ServiceTicketSchema(ma.SQLAlchemyAutoSchema):
-#     customer_id = fields.Int(required=True)
-#     id = fields.Int(dump_only=True)
-
-#     mechanics = fields.Nested("MechanicSchema", only=("id", "name"), many=True)
-#     customer = fields.Nested("CustomerSchema", only=("id", "name", "email", "phone"))
-
-#     class Meta:
-#         model = ServiceTicket
-#         include_fk = True
-#         fields = (
-#             "id",
-#             "VIN",
-#             "service_date",
-#             "service_desc",
-#             "customer_id",
-#             "customer",
-#             "mechanics",
-#         )
-
-#     VIN = fields.Str(required=True)
-#     service_desc = fields.Str(required=True)
-#     service_date = fields.Date(required=True)
-
-
-# class ServiceTicketSchema(ma.SQLAlchemyAutoSchema):
-#     id = fields.Int(dump_only=True)
-#     VIN = fields.String(required=True)
-#     service_desc = fields.String(required=True)
-#     service_date = fields.Date(required=True)
-#     customer_id = fields.Integer(required=True)
-#     mechanics = fields.Nested("MechanicSchema", only=("id", "name"), many=True)
-#     customer = fields.Nested("CustomerSchema", only=("id", "name", "email", "phone"))
-
-#     class Meta:
-#         model = ServiceTicket
-#         fields = (
-#             "id",
-#             "VIN",
-#             "service_date",
-#             "service_desc",
-#             "customer_id",
-#             "customer",
-#             "mechanics",
-#         )
-#         include_fk = True
 
 
 class EditServiceTicketSchema(ma.Schema):
@@ -79,31 +35,14 @@ class EditServiceTicketSchema(ma.Schema):
     remove_mechanic_ids = fields.List(fields.Int(), required=False, load_default=[])
     add_item_ids = fields.List(fields.Int(), required=False, load_default=[])
     remove_item_ids = fields.List(fields.Int(), required=False, load_default=[])
+
     class Meta:
-        fields = ("add_mechanic_ids", "remove_mechanic_ids", "add_item_ids", "remove_item_ids")
-
-
-# class EditServiceTicketSchema(ma.Schema):
-#     add_mechanic_ids = fields.List(fields.Int(), required=False, missing=[])
-#     remove_mechanic_ids = fields.List(fields.Int(), required=False, missing=[])
-#     add_item_ids = fields.List(fields.Int(), required=False, missing=[])
-#     remove_item_ids = fields.List(fields.Int(), required=False, missing=[])
-
-#     class Meta:
-#         fields = (
-#             "add_mechanic_ids",
-#             "remove_mechanic_ids",
-#             "add_item_ids",
-#             "remove_item_ids",
-#         )
-
-
-# class EditServiceTicketSchema(ma.Schema):
-#     add_mechanic_ids = fields.List(fields.Int(), required=True)
-#     remove_mechanic_ids = fields.List(fields.Int(), required=True)
-
-#     class Meta:
-#         fields = ("add_mechanic_ids", "remove_mechanic_ids")
+        fields = (
+            "add_mechanic_ids",
+            "remove_mechanic_ids",
+            "add_item_ids",
+            "remove_item_ids",
+        )
 
 
 service_ticket_schema = ServiceTicketSchema()
